# law-refs-pipeline

./: .gitignore  README.md  answer.html  fetch_iframe.py  load_law_json.py  pyproject.toml  requirements.txt  전기사업법.html  전기사업법.json  전기사업법.xml
cursor/: article_fix.md  cursor_external_law_link_resolution_spec.md  cursor_iframe_unwrap_instructions.md  cursor_json_ref_extraction_fix_spec.md  cursor_json_simplification_spec.md  cursor_json_simplification_spec_v1.md  cursor_law_json_plan_c.md  cursor_refactor_plan.md  cursor_spec_delegation_normalization.md  cursor_task_related_laws.md  cursor_task_related_laws_fix_spec.md  cursor_task_related_laws_v2_url_range.md  db.md  db_plan_c.sql  external_ref_schema.sql  iframe_unwrap_progress.md  law_llm_pipeline_design.md  refs_structure.md  wbs_law_index_qna.md
cursor/db_md/: law_article.md  law_provision_chunk.md
data/samples/: sample_body.html
scripts/: scratch_extract_related.py  simplify_related_refs.py
src/law_refs/: __init__.py
src/law_refs/cli/: main.py
src/law_refs/db/: __init__.py  config.py  connection.py  repo.py
src/refs/: README.md  __init__.py  enrich_json.py  extract_candidates.py  group_runs.py  lawgo_client.py  normalize_refs.py  range_parser.py  types.py
src/related_refs/: __init__.py  normalize_delegation.py  simplify.py
tests/: test_delegation_normalization.py  test_external_ref_extract.py  test_group_runs.py  test_html_locator.py  test_range_parser.py  test_related_extract.py  test_repo_upsert.py  test_simplify_refs.py
tmp_js/: common.js  fUpdate.js  ls.js  lsJo.js  lsLink.js  xmlHttpUtil.js
(+16 files in other folders)
